infra/k8s/overlays/development/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tagpay-dev
  labels:
    name: tagpay-dev
    environment: development
