infra/k8s/overlays/development/nginx-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: tagpay-dev
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nginx
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
